--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@mantine/next": "^5.8.2",
     "next": "13.0.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tabler-icons-react": "^1.55.0"
   },
   "devDependencies": {
     "eslint": "8.28.0",
